# call-me-maybe

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
src/: GenerationPipeline.py  JSONFSM.py  JSONValidator.py  __main__.py  common.py  generation_pipeline.py  io_handler.py  json_fsm.py  json_validator.py  models.py
tests/: test_generation_pipeline.py  test_io.py  test_json_fsm.py  test_json_validator.py
