[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.13.0",
    "llm-sdk",
    "numpy>=2.2.6",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=1.20.2",
    "pytest>=9.0.3",
]

[tool.mypy]
exclude = [
    "^llm_sdk/$"
]

[[tool.mypy.overrides]]
module = ["llm_sdk"]
ignore_missing_imports = true
follow_imports = "skip"
ignore_errors = true

[tool.uv.workspace]
members = [
    "llm_sdk",
]

[tool.uv.sources]
llm-sdk = { workspace = true }
